just need the suits to show

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="containerFluid text-center">
-      <div class="card">
+      <div class="card spade">
         <!--<span class="top-suit">&spades;</span>-->
         <span class="number">7</span>
         <!--<span class="bottom-suit">&spades;</span>-->
