--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,16 @@
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
     <div class="containerFluid text-center">
       <div class="card spade">
-        <!--<span class="top-suit">&spades;</span>-->
+        <span class="top-suit">♠</span>
         <span class="number">7</span>
-        <!--<span class="bottom-suit">&spades;</span>-->
+        <span class="bottom-suit">♠</span>
       </div>
     </div>
   </body>
 </html>
-<!--https://www.youtube.com/watch?v=kFrWxuKor_Y-->
