--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="containerFluid text-center">
+    <div class="container-Fluid text-center">
       <div class="card spade">
         <span class="top-suit">♠</span>
         <span class="number">7</span>
